--- a/NetworkInterfaceConfigurator/Resources/Fonts.xaml
+++ b/NetworkInterfaceConfigurator/Resources/Fonts.xaml
@@ -9,6 +9,8 @@
     <FontFamily x:Key="StandartText">pack://application:,,,/Design/Fonts/#Raleway Regular</FontFamily>
     <FontFamily x:Key="ValuesText-Light">pack://application:,,,/Design/Fonts/#Calibri Light</FontFamily>
     <FontFamily x:Key="ValuesText">pack://application:,,,/Design/Fonts/#Calibri Regular</FontFamily>
+    <FontFamily x:Key="BoldFont-Light">pack://application:,,,/Design/Fonts/#Roboto Light</FontFamily>
+    <FontFamily x:Key="BoldFont">pack://application:,,,/Design/Fonts/#Roboto Regular</FontFamily>
 
     <system:Double x:Key="Small">8</system:Double>
     <system:Double x:Key="Regular">10</system:Double>
