--- a/NetworkInterfaceConfigurator/Resources/Icons.xaml
+++ b/NetworkInterfaceConfigurator/Resources/Icons.xaml
@@ -296,4 +296,11 @@
         </Canvas>
     </ControlTemplate>
 
+    <Style x:Key="GridPresetsRectangles" TargetType="{x:Type Rectangle}">
+        <Setter Property="Stroke" Value="{StaticResource BrushMediumGray2}"/>
+        <Setter Property="Width" Value="70"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="VerticalAlignment" Value="Bottom"/>
+    </Style>
+
 </ResourceDictionary>
