Add and stylized control buttons.

--- a/NetworkInterfaceConfigurator/Resources/Fonts.xaml
+++ b/NetworkInterfaceConfigurator/Resources/Fonts.xaml
@@ -6,6 +6,7 @@
     <FontFamily x:Key="WideFont">pack://application:,,,/Design/Fonts/#Montserrat Regular</FontFamily>
     <FontFamily x:Key="WideFont-Medium">pack://application:,,,/Design/Fonts/#Montserrat Medium</FontFamily>
     <FontFamily x:Key="StandartText-Light">pack://application:,,,/Design/Fonts/#Raleway Light</FontFamily>
+    <FontFamily x:Key="StandartText-Medium">pack://application:,,,/Design/Fonts/#Raleway Medium</FontFamily>
     <FontFamily x:Key="StandartText">pack://application:,,,/Design/Fonts/#Raleway Regular</FontFamily>
     <FontFamily x:Key="ValuesText-Light">pack://application:,,,/Design/Fonts/#Calibri Light</FontFamily>
     <FontFamily x:Key="ValuesText">pack://application:,,,/Design/Fonts/#Calibri Regular</FontFamily>
