--- a/NetworkInterfaceConfigurator/Resources/Buttons.xaml
+++ b/NetworkInterfaceConfigurator/Resources/Buttons.xaml
@@ -108,4 +108,45 @@
         </Setter>
     </Style>
 
+    <Style x:Key="MacRandButton" TargetType="{x:Type Button}">
+        <Setter Property="Margin" Value="0, 0, 0, 6"/>
+        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="VerticalAlignment" Value="Bottom" />
+        <Setter Property="Focusable" Value="false" />
+        <Setter Property="Background" Value="{StaticResource BrushVeryDarkGray}"/>
+        <Setter Property="Foreground" Value="{StaticResource BrushWhite}"/>
+        <Setter Property="FontSize" Value="{StaticResource Regular}"/>
+        <Setter Property="FontFamily" Value="{StaticResource StandartText-Bold}"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Grid>
+                        <Border
+                            x:Name="PART_border"
+                            Background="Transparent">
+
+                            <Control x:Name="RandomBorder"
+                                     Background="{Binding Path=Background, RelativeSource={RelativeSource TemplatedParent}}"
+                                     Foreground="{StaticResource BrushABlack}"
+                                     Template="{StaticResource RandomBorder}"
+                                     Grid.Column="1">
+                            </Control>
+                        </Border>
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="RandomBorder" Property="Background" Value="{StaticResource BrushLightBlue}" />
+                            <Setter TargetName="RandomBorder" Property="Foreground" Value="{StaticResource BrushABlack}" />
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter TargetName="RandomBorder" Property="Background" Value="{StaticResource BrushPressedLightBlue}"/>
+                            <Setter TargetName="RandomBorder" Property="Foreground" Value="{StaticResource BrushABlack}"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
 </ResourceDictionary>
