--- a/NetworkInterfaceConfigurator/Views/MainWindow.xaml
+++ b/NetworkInterfaceConfigurator/Views/MainWindow.xaml
@@ -227,13 +227,32 @@
                                     <TextBlock Text="00:00:00:00:00:00"
                                            Style="{StaticResource GridContentValues}"
                                            Grid.Column="0"/>
-                                    <TextBox Tag="Set mac here" Style="{StaticResource GridContentSettings}" Grid.Column="1"/>
+                                    <TextBox Tag="Set mac here" Style="{StaticResource GridContentSettings}"
+                                                Grid.Column="1"/>
                                 </Grid>
                             </Grid>
                         </StackPanel>
                     </Grid>
                     <Grid x:Name="gridAdapterStats" Grid.Column="1">
-
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="23"/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        
+                        <Grid  Grid.Column="0">
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
+                            <Button Content="R"
+                                    ToolTip="Set random mac address"
+                                    Style="{StaticResource MacRandButton}"
+                                    Grid.Row="5"/>
+                        </Grid>
                     </Grid>
                 </Grid>
                 <Grid x:Name="gridAdapterButtons" Grid.Row="2">
