--- a/NetworkInterfaceConfigurator/Views/MainWindow.xaml
+++ b/NetworkInterfaceConfigurator/Views/MainWindow.xaml
@@ -57,7 +57,12 @@
                         <TextBlock Text="Presets" Style="{StaticResource GridPresetsTitle}"/>
                     </Grid>
                     <Grid Height="34">
-                        <Button Content="Preset 1" Tag="Active" Style="{StaticResource GridPresetsButtons}"/>
+                        <Button Content="Preset 1" Tag="Active" Style="{StaticResource GridPresetsButtons}">
+                            <Button.InputBindings>
+                                <MouseBinding Command="{Binding EditPreset}"
+                                              Gesture="Control+LeftClick"/>
+                            </Button.InputBindings>
+                        </Button>
                         <Rectangle Style="{StaticResource GridPresetsRectangles}"/>
                     </Grid>
                     <Grid Height="34">
@@ -123,7 +128,7 @@
                 </Grid>
                 <Grid x:Name="gridAdapterData" Grid.Row="1">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="267"/>
+                        <ColumnDefinition Width="290"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <Grid x:Name="gridAdapterSettings" Margin="20, 0, 0, 0" Grid.Column="0">
@@ -138,6 +143,7 @@
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition/>
                                         <ColumnDefinition/>
+                                        <ColumnDefinition Width="23"/>
                                     </Grid.ColumnDefinitions>
                                     <TextBlock Text="255.255.255.255"
                                                Style="{StaticResource GridContentValues}"
@@ -155,6 +161,7 @@
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition/>
                                         <ColumnDefinition/>
+                                        <ColumnDefinition Width="23"/>
                                     </Grid.ColumnDefinitions>
                                     <TextBlock Text="255.255.255.255"
                                            Style="{StaticResource GridContentValues}"
@@ -172,6 +179,7 @@
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition/>
                                         <ColumnDefinition/>
+                                        <ColumnDefinition Width="23"/>
                                     </Grid.ColumnDefinitions>
                                     <TextBlock Text="255.255.255.255"
                                            Style="{StaticResource GridContentValues}"
@@ -189,6 +197,7 @@
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition/>
                                         <ColumnDefinition/>
+                                        <ColumnDefinition Width="23"/>
                                     </Grid.ColumnDefinitions>
                                     <TextBlock Text="255.255.255.255"
                                            Style="{StaticResource GridContentValues}"
@@ -206,6 +215,7 @@
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition/>
                                         <ColumnDefinition/>
+                                        <ColumnDefinition Width="23"/>
                                     </Grid.ColumnDefinitions>
                                     <TextBlock Text="255.255.255.255"
                                            Style="{StaticResource GridContentValues}"
@@ -223,36 +233,25 @@
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition/>
                                         <ColumnDefinition/>
+                                        <ColumnDefinition Width="23"/>
                                     </Grid.ColumnDefinitions>
                                     <TextBlock Text="00:00:00:00:00:00"
                                            Style="{StaticResource GridContentValues}"
                                            Grid.Column="0"/>
                                     <TextBox Tag="Set mac here" Style="{StaticResource GridContentSettings}"
                                                 Grid.Column="1"/>
+                                    <Button Content="R"
+                                            ToolTip="Set random mac address"
+                                            HorizontalAlignment="Center"
+                                            VerticalAlignment="Center"
+                                            Style="{StaticResource MacRandButton}"
+                                            Grid.Column="2"/>
                                 </Grid>
                             </Grid>
                         </StackPanel>
                     </Grid>
                     <Grid x:Name="gridAdapterStats" Grid.Column="1">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="23"/>
-                            <ColumnDefinition/>
-                        </Grid.ColumnDefinitions>
                         
-                        <Grid  Grid.Column="0">
-                            <Grid.RowDefinitions>
-                                <RowDefinition/>
-                                <RowDefinition/>
-                                <RowDefinition/>
-                                <RowDefinition/>
-                                <RowDefinition/>
-                                <RowDefinition/>
-                            </Grid.RowDefinitions>
-                            <Button Content="R"
-                                    ToolTip="Set random mac address"
-                                    Style="{StaticResource MacRandButton}"
-                                    Grid.Row="5"/>
-                        </Grid>
                     </Grid>
                 </Grid>
                 <Grid x:Name="gridAdapterButtons" Grid.Row="2">
