Add adapters list to UI. Add get adapter properties to UI. (Adapter properties loading only for selected adapter ) Moved ProperyChanged to a individual file.

--- a/NetworkInterfaceConfigurator/Resources/ComboBox.xaml
+++ b/NetworkInterfaceConfigurator/Resources/ComboBox.xaml
@@ -89,8 +89,7 @@
         </Setter>
     </Style>
 
-    <Style x:Key="AdapterSelectorItem"
-           TargetType="{x:Type ComboBoxItem}">
+    <Style TargetType="{x:Type ComboBoxItem}">
         <Setter Property="SnapsToDevicePixels" Value="true" />
         <Setter Property="OverridesDefaultStyle" Value="true" />
         <Setter Property="Foreground" Value="{StaticResource BrushWhite}"/>
