--- a/NetworkInterfaceConfigurator/Views/MainWindow.xaml
+++ b/NetworkInterfaceConfigurator/Views/MainWindow.xaml
@@ -103,26 +103,21 @@
                 <Grid x:Name="gridAdapterField" Margin="20,0" Grid.Row="0">
                     <StackPanel Margin="0, 14, 0, 0" Orientation="Vertical">
                         <TextBlock Text="Adapter" Style="{StaticResource GridContentTitles}"/>
-                        <ComboBox Style="{StaticResource AdapterSelector}">
-                            <ComboBoxItem Style="{StaticResource AdapterSelectorItem}">Item 1</ComboBoxItem>
-                            <ComboBoxItem Style="{StaticResource AdapterSelectorItem}">Item 2</ComboBoxItem>
-                            <ComboBoxItem Style="{StaticResource AdapterSelectorItem}">Item 3</ComboBoxItem>
-                            <ComboBoxItem Style="{StaticResource AdapterSelectorItem}">Item 4</ComboBoxItem>
-                            <ComboBoxItem Style="{StaticResource AdapterSelectorItem}">Item 5</ComboBoxItem>
-                            <ComboBoxItem Style="{StaticResource AdapterSelectorItem}">Item 6</ComboBoxItem>
-                            <ComboBoxItem Style="{StaticResource AdapterSelectorItem}">Item 7</ComboBoxItem>
-                            <ComboBoxItem Style="{StaticResource AdapterSelectorItem}">Item 8</ComboBoxItem>
-                            <ComboBoxItem Style="{StaticResource AdapterSelectorItem}">Item 9</ComboBoxItem>
-                            <ComboBoxItem Style="{StaticResource AdapterSelectorItem}">Item 10</ComboBoxItem>
-                            <ComboBoxItem Style="{StaticResource AdapterSelectorItem}">Item 11</ComboBoxItem>
-                            <ComboBoxItem Style="{StaticResource AdapterSelectorItem}">Item 12</ComboBoxItem>
-                            <ComboBoxItem Style="{StaticResource AdapterSelectorItem}">Item 13</ComboBoxItem>
-                            <ComboBoxItem Style="{StaticResource AdapterSelectorItem}">Item 14</ComboBoxItem>
-                            <ComboBoxItem Style="{StaticResource AdapterSelectorItem}">Item 15</ComboBoxItem>
-                            <ComboBoxItem Style="{StaticResource AdapterSelectorItem}">Item 16</ComboBoxItem>
-                            <ComboBoxItem Style="{StaticResource AdapterSelectorItem}">Item 17</ComboBoxItem>
-                            <ComboBoxItem Style="{StaticResource AdapterSelectorItem}">Item 18</ComboBoxItem>
-                            <ComboBoxItem Style="{StaticResource AdapterSelectorItem}">Item 19</ComboBoxItem>
+                        <ComboBox Style="{StaticResource AdapterSelector}"
+                                  ItemsSource="{Binding Adapters}"
+                                  SelectedItem="{Binding SelectedAdapter}">
+                            <ComboBox.ItemTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="#"/>
+                                        <TextBlock Text="{Binding Path=NicID}" Margin="0, 0, 10, 0"/>
+                                        <TextBlock Text="{Binding Path=NicName}" Margin="0, 0, 10, 0"/>
+                                        <TextBlock Text="("/>
+                                        <TextBlock Text="{Binding Path=NetName}"/>
+                                        <TextBlock Text=")"/>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ComboBox.ItemTemplate>
                         </ComboBox>
                     </StackPanel>
                 </Grid>
@@ -132,7 +127,7 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <Grid x:Name="gridAdapterSettings" Margin="20, 0, 0, 0" Grid.Column="0">
-                        <StackPanel Orientation="Vertical">
+                        <StackPanel DataContext="{Binding SelectedAdapter}" Orientation="Vertical">
                             <Grid Margin="0, 18, 0, 0">
                                 <Grid.RowDefinitions>
                                     <RowDefinition/>
@@ -145,7 +140,7 @@
                                         <ColumnDefinition/>
                                         <ColumnDefinition Width="23"/>
                                     </Grid.ColumnDefinitions>
-                                    <TextBlock Text="255.255.255.255"
+                                    <TextBlock Text="{Binding IP, TargetNullValue=0.0.0.0, FallbackValue=0.0.0.0}"
                                                Style="{StaticResource GridContentValues}"
                                                Grid.Column="0"/>
                                     <TextBox Tag="Set ip here" Style="{StaticResource GridContentSettings}" Grid.Column="1"/>
@@ -163,7 +158,7 @@
                                         <ColumnDefinition/>
                                         <ColumnDefinition Width="23"/>
                                     </Grid.ColumnDefinitions>
-                                    <TextBlock Text="255.255.255.255"
+                                    <TextBlock Text="{Binding Subnet, TargetNullValue=0.0.0.0, FallbackValue=0.0.0.0}"
                                            Style="{StaticResource GridContentValues}"
                                            Grid.Column="0"/>
                                     <TextBox Tag="Set subnet here" Style="{StaticResource GridContentSettings}" Grid.Column="1"/>
@@ -181,7 +176,7 @@
                                         <ColumnDefinition/>
                                         <ColumnDefinition Width="23"/>
                                     </Grid.ColumnDefinitions>
-                                    <TextBlock Text="255.255.255.255"
+                                    <TextBlock Text="{Binding Gateway, TargetNullValue=0.0.0.0, FallbackValue=0.0.0.0}"
                                            Style="{StaticResource GridContentValues}"
                                            Grid.Column="0"/>
                                     <TextBox Tag="Set gateway here" Style="{StaticResource GridContentSettings}" Grid.Column="1"/>
@@ -199,7 +194,7 @@
                                         <ColumnDefinition/>
                                         <ColumnDefinition Width="23"/>
                                     </Grid.ColumnDefinitions>
-                                    <TextBlock Text="255.255.255.255"
+                                    <TextBlock Text="{Binding DNS[0], TargetNullValue=0.0.0.0, FallbackValue=0.0.0.0}"
                                            Style="{StaticResource GridContentValues}"
                                            Grid.Column="0"/>
                                     <TextBox Tag="Set 1st dns here" Style="{StaticResource GridContentSettings}" Grid.Column="1"/>
@@ -217,7 +212,7 @@
                                         <ColumnDefinition/>
                                         <ColumnDefinition Width="23"/>
                                     </Grid.ColumnDefinitions>
-                                    <TextBlock Text="255.255.255.255"
+                                    <TextBlock Text="{Binding DNS[1], TargetNullValue=0.0.0.0, FallbackValue=0.0.0.0}"
                                            Style="{StaticResource GridContentValues}"
                                            Grid.Column="0"/>
                                     <TextBox Tag="Set 2nd dns here" Style="{StaticResource GridContentSettings}" Grid.Column="1"/>
@@ -235,7 +230,7 @@
                                         <ColumnDefinition/>
                                         <ColumnDefinition Width="23"/>
                                     </Grid.ColumnDefinitions>
-                                    <TextBlock Text="00:00:00:00:00:00"
+                                    <TextBlock Text="{Binding MAC, TargetNullValue=0.0.0.0, FallbackValue=0.0.0.0}"
                                            Style="{StaticResource GridContentValues}"
                                            Grid.Column="0"/>
                                     <TextBox Tag="Set mac here" Style="{StaticResource GridContentSettings}"
