--- a/NetworkInterfaceConfigurator/Resources/ComboBox.xaml
+++ b/NetworkInterfaceConfigurator/Resources/ComboBox.xaml
@@ -13,7 +13,9 @@
                     BorderThickness="1"
                     BorderBrush="{StaticResource BrushABlack}"
                     Background="{StaticResource BrushVeryDarkGray}"
-                    Grid.ColumnSpan="2"/>
+                    Grid.ColumnSpan="2">
+                <ContentPresenter/>
+            </Border>
             <Control x:Name="Arrow"
                      Foreground="{StaticResource BrushAWhite}"
                      Template="{StaticResource Arrow}"
@@ -31,6 +33,8 @@
         <Setter Property="MinWidth" Value="120" />
         <Setter Property="MinHeight" Value="20" />
         <Setter Property="Foreground" Value="{StaticResource BrushWhite}"/>
+        <Setter Property="FontSize" Value="{StaticResource Regular}"/>
+        <Setter Property="FontFamily" Value="{StaticResource WideFont}"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ComboBox}">
@@ -38,17 +42,21 @@
                         <!-- ToggleButton open Popup(Dropdown menu) with properties: IsChecked & IsOpen. -->
                         <ToggleButton x:Name="ToggleButton"
                                       Template="{StaticResource ComboBoxToggleButton}"
+                                      TextBlock.Foreground="{TemplateBinding Foreground}"
+                                      TextBlock.FontSize="{TemplateBinding FontSize}"
+                                      TextBlock.FontFamily="{TemplateBinding FontFamily}"
                                       Focusable="false"
                                       ClickMode="Press"
-                                      IsChecked="{Binding IsDropDownOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"/>
-                        <ContentPresenter x:Name="ContentSite"
+                                      IsChecked="{Binding IsDropDownOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}">
+                            <ContentPresenter x:Name="ContentSite"
                                           Margin="6,0,33,0"
                                           VerticalAlignment="Center"
                                           HorizontalAlignment="Left"
                                           Content="{TemplateBinding SelectionBoxItem}"
                                           ContentTemplate="{TemplateBinding SelectionBoxItemTemplate}"
                                           ContentTemplateSelector="{TemplateBinding ItemTemplateSelector}">
-                        </ContentPresenter>
+                            </ContentPresenter>
+                        </ToggleButton>
                         <Popup x:Name="Popup"
                                Placement="Bottom"
                                Focusable="False"
